--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/dialog_background">
 
     <TextView
         android:id="@+id/drink_description"
@@ -10,6 +12,7 @@
         android:layout_centerHorizontal="true"
         android:paddingTop="160dp"
         android:textSize="32sp"
+        android:textColor="#FFFFFF"
         android:text="Here is the text describing the drink" />
 
     <TextView
@@ -18,9 +21,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"
         android:layout_marginTop="72dp"
-        android:text="Drink Name" />
+        android:fontFamily="@font/sign_painter"
+        android:textColor="#FC8E85"
+        android:text="Drink Name"
+        android:textSize="56sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,17 +34,26 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="8dp">
-        <Button
+
+        <ImageButton
             android:id="@+id/go_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Go Back" />
+            android:src="@drawable/pour_it_up_button"
+            android:text="Go Back"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@null"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/pour_drink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pour it up" />
+            android:src="@drawable/go_back_button"
+            android:text="Pour it up"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@null"/>
 
     </LinearLayout>
 
